Bone Extrude via Ctrl + clic is not done from active bone tail #53300

Closed
opened 2017-11-11 17:16:50 +01:00 by Julien Duroure · 7 comments
Member

System Information
Ubuntu 14.04, GTX 860M

Blender Version
Broken: 2.79

Short description of error
Bone Extrude via Ctrl + clic is not done from active bone tail

Exact steps for others to reproduce the error

  • Add a new armature, enter edit mode
  • add a new bone, out of symmetry axe
  • rename bone bone.L
  • active X-mirror
  • Extrude bone.L using E --> no bug, extrude is done from active bone tail
  • Extrude using ctrl + clic --> Bug, extrude is not done from active bone tail

I did'nt success to reproduce this bug without this exact steps, but is 100% reproducible with these steps.

I uploaded a video to show the bug : https://www.youtube.com/watch?v=Buq0iHtxLYI

**System Information** Ubuntu 14.04, GTX 860M **Blender Version** Broken: 2.79 **Short description of error** Bone Extrude via Ctrl + clic is not done from active bone tail **Exact steps for others to reproduce the error** * Add a new armature, enter edit mode * add a new bone, out of symmetry axe * rename bone bone.L * active X-mirror * Extrude bone.L using E --> no bug, extrude is done from active bone tail * Extrude using ctrl + clic --> Bug, extrude is not done from active bone tail I did'nt success to reproduce this bug without this exact steps, but is 100% reproducible with these steps. I uploaded a video to show the bug : https://www.youtube.com/watch?v=Buq0iHtxLYI
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Joshua Leung was assigned by Julien Duroure 2017-11-11 17:17:35 +01:00

Added subscriber: @zeauro

Added subscriber: @zeauro

Issue confirmed on ubuntu 16.04 with official 2.79 and master e389ae9
It looks like E is stopping update of Active Bone for Ctrl Click.

We just have to re-select active bone tail by a right-click and cancel movement to have Ctrl clic working correctly.
But by redoing an extrusion by E, problem will re-appear.

Problem seems to be limited to symmetrical armature. I did not manage to reproduce it without X-mirror either.

Issue confirmed on ubuntu 16.04 with official 2.79 and master e389ae9 It looks like E is stopping update of Active Bone for Ctrl Click. We just have to re-select active bone tail by a right-click and cancel movement to have Ctrl clic working correctly. But by redoing an extrusion by E, problem will re-appear. Problem seems to be limited to symmetrical armature. I did not manage to reproduce it without X-mirror either.

This issue was referenced by 6f578740ef

This issue was referenced by 6f578740ef1b29723d37e9ec09721f58879615c1
Member

Confirmed and fixed now.

For future reference, there are a few steps missing from the original description. Here's the full procedure to reproduce:

  1. Add a new armature, enter edit mode
  2. Move cursor off to the side (e.g. x = 1.2, z = 0.9) [***]
  3. Add a new bone (Shift-A)
  4. Rename bone added in step 3 "bone.L"
  5. W -> Symmetrize [***]
  6. Enable X-mirror
  7. Extrude bone.L using E ==> No Bug: Newly extruded bone appears from active bones tail
  8. Keep extruding (E) several times
  9. Extrude using ctrl + click ==> Bug: Newly extruded bone starts from the head of the first bone created using Extrude (E)
Confirmed and fixed now. For future reference, there are a few steps missing from the original description. Here's the full procedure to reproduce: 1) Add a new armature, enter edit mode 2) Move cursor off to the side (e.g. x = 1.2, z = 0.9) [***] 3) Add a new bone (Shift-A) 4) Rename bone added in step 3 "bone.L" 5) W -> Symmetrize [***] 6) Enable X-mirror 7) Extrude bone.L using E ==> No Bug: Newly extruded bone appears from active bones tail 8) Keep extruding (E) several times 9) Extrude using ctrl + click ==> Bug: Newly extruded bone starts from the head of the first bone created using Extrude (E)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53300
No description provided.