Fix T53300: Bone Extrude via Ctrl + Click is not done from active bone tail